src/parser/wlr/wayland.h

typedef __int32_t int32_t;
typedef __int64_t int64_t;
typedef __uint32_t uint32_t;
typedef long unsigned int size_t;
typedef __gnuc_va_list va_list;
struct wl_object;
struct wl_message {

 const char *name;

 const char *signature;

 const struct wl_interface **types;
};
struct wl_interface {

 const char *name;

 int version;

 int method_count;

 const struct wl_message *methods;

 int event_count;

 const struct wl_message *events;
};
struct wl_list {

 struct wl_list *prev;

 struct wl_list *next;
};
void
wl_list_init(struct wl_list *list);
void
wl_list_insert(struct wl_list *list, struct wl_list *elm);
void
wl_list_remove(struct wl_list *elm);
int
wl_list_length(const struct wl_list *list);
int
wl_list_empty(const struct wl_list *list);
void
wl_list_insert_list(struct wl_list *list, struct wl_list *other);
struct wl_array {

 size_t size;

 size_t alloc;

 void *data;
};
void
wl_array_init(struct wl_array *array);
void
wl_array_release(struct wl_array *array);
void *
wl_array_add(struct wl_array *array, size_t size);
int
wl_array_copy(struct wl_array *array, struct wl_array *source);
typedef int32_t wl_fixed_t;
static inline double
wl_fixed_to_double(wl_fixed_t f)
{
 union {
  double d;
  int64_t i;
 } u;

 u.i = ((1023LL + 44LL) << 52) + (1LL << 51) + f;

 return u.d - (3LL << 43);
}
static inline wl_fixed_t
wl_fixed_from_double(double d)
{
 union {
  double d;
  int64_t i;
 } u;

 u.d = d + (3LL << (51 - 8));

 return u.i;
}
static inline int
wl_fixed_to_int(wl_fixed_t f)
{
 return f / 256;
}
static inline wl_fixed_t
wl_fixed_from_int(int i)
{
 return i * 256;
}
union wl_argument {
 int32_t i;
 uint32_t u;
 wl_fixed_t f;
 const char *s;
 struct wl_object *o;
 uint32_t n;
 struct wl_array *a;
 int32_t h;
};
typedef int (*wl_dispatcher_func_t)(const void *, void *, uint32_t,
        const struct wl_message *,
        union wl_argument *);
typedef void (*wl_log_func_t)(const char *, va_list) __attribute__((__format__(__printf__, 1, 0)));
enum wl_iterator_result {

 WL_ITERATOR_STOP,

 WL_ITERATOR_CONTINUE
};
struct wl_client;
void
wl_client_post_implementation_error(struct wl_client *client,
                                    const char* msg, ...) __attribute__((__format__(__printf__, 2, 3)));
struct wl_signal {
 struct wl_list listener_list;
};
typedef void (*wl_resource_destroy_func_t)(struct wl_resource *resource);
void
wl_resource_post_error(struct wl_resource *resource,
         uint32_t code, const char *msg, ...) __attribute__((__format__(__printf__, 3, 4)));
struct wl_object {
 const struct wl_interface *interface;
 const void *implementation;
 uint32_t id;
};
struct wl_resource {
 struct wl_object object;
 wl_resource_destroy_func_t destroy;
 struct wl_list link;
 struct wl_signal destroy_signal;
 struct wl_client *client;
 void *data;
};
struct wl_client;
struct wl_resource;
extern const struct wl_interface wl_data_device_interface;
extern const struct wl_interface wl_data_device_manager_interface;
extern const struct wl_interface wl_shell_interface;
extern const struct wl_interface wl_shell_surface_interface;
extern const struct wl_interface wl_surface_interface;
extern const struct wl_interface wl_seat_interface;
extern const struct wl_interface wl_pointer_interface;
extern const struct wl_interface wl_keyboard_interface;
extern const struct wl_interface wl_touch_interface;
extern const struct wl_interface wl_output_interface;
extern const struct wl_interface wl_region_interface;
extern const struct wl_interface wl_subcompositor_interface;
extern const struct wl_interface wl_subsurface_interface;
struct wl_data_device_interface {
# 2060 "wayland-server-protocol.h"
 void (*start_drag)(struct wl_client *client,
      struct wl_resource *resource,
      struct wl_resource *source,
      struct wl_resource *origin,
      struct wl_resource *icon,
      uint32_t serial);
# 2076 "wayland-server-protocol.h"
 void (*set_selection)(struct wl_client *client,
         struct wl_resource *resource,
         struct wl_resource *source,
         uint32_t serial);






 void (*release)(struct wl_client *client,
   struct wl_resource *resource);
};
struct wl_data_device_manager_interface {






 void (*create_data_source)(struct wl_client *client,
       struct wl_resource *resource,
       uint32_t id);







 void (*get_data_device)(struct wl_client *client,
    struct wl_resource *resource,
    uint32_t id,
    struct wl_resource *seat);
};
struct wl_shell_interface {
# 2324 "wayland-server-protocol.h"
 void (*get_shell_surface)(struct wl_client *client,
      struct wl_resource *resource,
      uint32_t id,
      struct wl_resource *surface);
};
struct wl_shell_surface_interface {







 void (*pong)(struct wl_client *client,
       struct wl_resource *resource,
       uint32_t serial);
# 2460 "wayland-server-protocol.h"
 void (*move)(struct wl_client *client,
       struct wl_resource *resource,
       struct wl_resource *seat,
       uint32_t serial);
# 2476 "wayland-server-protocol.h"
 void (*resize)(struct wl_client *client,
         struct wl_resource *resource,
         struct wl_resource *seat,
         uint32_t serial,
         uint32_t edges);







 void (*set_toplevel)(struct wl_client *client,
        struct wl_resource *resource);
# 2505 "wayland-server-protocol.h"
 void (*set_transient)(struct wl_client *client,
         struct wl_resource *resource,
         struct wl_resource *parent,
         int32_t x,
         int32_t y,
         uint32_t flags);
# 2552 "wayland-server-protocol.h"
 void (*set_fullscreen)(struct wl_client *client,
          struct wl_resource *resource,
          uint32_t method,
          uint32_t framerate,
          struct wl_resource *output);
# 2586 "wayland-server-protocol.h"
 void (*set_popup)(struct wl_client *client,
     struct wl_resource *resource,
     struct wl_resource *seat,
     uint32_t serial,
     struct wl_resource *parent,
     int32_t x,
     int32_t y,
     uint32_t flags);
# 2617 "wayland-server-protocol.h"
 void (*set_maximized)(struct wl_client *client,
         struct wl_resource *resource,
         struct wl_resource *output);
# 2632 "wayland-server-protocol.h"
 void (*set_title)(struct wl_client *client,
     struct wl_resource *resource,
     const char *title);
# 2646 "wayland-server-protocol.h"
 void (*set_class)(struct wl_client *client,
     struct wl_resource *resource,
     const char *class_);
};
struct wl_surface_interface {





 void (*destroy)(struct wl_client *client,
   struct wl_resource *resource);
# 2832 "wayland-server-protocol.h"
 void (*attach)(struct wl_client *client,
         struct wl_resource *resource,
         struct wl_resource *buffer,
         int32_t x,
         int32_t y);
# 2868 "wayland-server-protocol.h"
 void (*damage)(struct wl_client *client,
         struct wl_resource *resource,
         int32_t x,
         int32_t y,
         int32_t width,
         int32_t height);
# 2913 "wayland-server-protocol.h"
 void (*frame)(struct wl_client *client,
        struct wl_resource *resource,
        uint32_t callback);
# 2946 "wayland-server-protocol.h"
 void (*set_opaque_region)(struct wl_client *client,
      struct wl_resource *resource,
      struct wl_resource *region);
# 2976 "wayland-server-protocol.h"
 void (*set_input_region)(struct wl_client *client,
     struct wl_resource *resource,
     struct wl_resource *region);
# 3000 "wayland-server-protocol.h"
 void (*commit)(struct wl_client *client,
         struct wl_resource *resource);
# 3040 "wayland-server-protocol.h"
 void (*set_buffer_transform)(struct wl_client *client,
         struct wl_resource *resource,
         int32_t transform);
# 3075 "wayland-server-protocol.h"
 void (*set_buffer_scale)(struct wl_client *client,
     struct wl_resource *resource,
     int32_t scale);
# 3121 "wayland-server-protocol.h"
 void (*damage_buffer)(struct wl_client *client,
         struct wl_resource *resource,
         int32_t x,
         int32_t y,
         int32_t width,
         int32_t height);
};
struct wl_seat_interface {
# 3248 "wayland-server-protocol.h"
 void (*get_pointer)(struct wl_client *client,
       struct wl_resource *resource,
       uint32_t id);
# 3263 "wayland-server-protocol.h"
 void (*get_keyboard)(struct wl_client *client,
        struct wl_resource *resource,
        uint32_t id);
# 3278 "wayland-server-protocol.h"
 void (*get_touch)(struct wl_client *client,
     struct wl_resource *resource,
     uint32_t id);







 void (*release)(struct wl_client *client,
   struct wl_resource *resource);
};
struct wl_pointer_interface {
# 3488 "wayland-server-protocol.h"
 void (*set_cursor)(struct wl_client *client,
      struct wl_resource *resource,
      uint32_t serial,
      struct wl_resource *surface,
      int32_t hotspot_x,
      int32_t hotspot_y);
# 3504 "wayland-server-protocol.h"
 void (*release)(struct wl_client *client,
   struct wl_resource *resource);
};
struct wl_keyboard_interface {






 void (*release)(struct wl_client *client,
   struct wl_resource *resource);
};
struct wl_touch_interface {






 void (*release)(struct wl_client *client,
   struct wl_resource *resource);
};
struct wl_output_interface {







 void (*release)(struct wl_client *client,
   struct wl_resource *resource);
};
static inline void
wl_output_send_geometry(struct wl_resource *resource_, int32_t x, int32_t y, int32_t physical_width, int32_t physical_height, int32_t subpixel, const char *make, const char *model, int32_t transform)
{
 wl_resource_post_event(resource_, 0, x, y, physical_width, physical_height, subpixel, make, model, transform);
}
static inline void
wl_output_send_mode(struct wl_resource *resource_, uint32_t flags, int32_t width, int32_t height, int32_t refresh)
{
 wl_resource_post_event(resource_, 1, flags, width, height, refresh);
}
static inline void
wl_output_send_done(struct wl_resource *resource_)
{
 wl_resource_post_event(resource_, 2);
}
static inline void
wl_output_send_scale(struct wl_resource *resource_, int32_t factor)
{
 wl_resource_post_event(resource_, 3, factor);
}
struct wl_region_interface {





 void (*destroy)(struct wl_client *client,
   struct wl_resource *resource);
# 4247 "wayland-server-protocol.h"
 void (*add)(struct wl_client *client,
      struct wl_resource *resource,
      int32_t x,
      int32_t y,
      int32_t width,
      int32_t height);
# 4262 "wayland-server-protocol.h"
 void (*subtract)(struct wl_client *client,
    struct wl_resource *resource,
    int32_t x,
    int32_t y,
    int32_t width,
    int32_t height);
};
struct wl_subcompositor_interface {







 void (*destroy)(struct wl_client *client,
   struct wl_resource *resource);
# 4331 "wayland-server-protocol.h"
 void (*get_subsurface)(struct wl_client *client,
          struct wl_resource *resource,
          uint32_t id,
          struct wl_resource *surface,
          struct wl_resource *parent);
};
struct wl_subsurface_interface {
# 4373 "wayland-server-protocol.h"
 void (*destroy)(struct wl_client *client,
   struct wl_resource *resource);
# 4398 "wayland-server-protocol.h"
 void (*set_position)(struct wl_client *client,
        struct wl_resource *resource,
        int32_t x,
        int32_t y);
# 4422 "wayland-server-protocol.h"
 void (*place_above)(struct wl_client *client,
       struct wl_resource *resource,
       struct wl_resource *sibling);







 void (*place_below)(struct wl_client *client,
       struct wl_resource *resource,
       struct wl_resource *sibling);
# 4452 "wayland-server-protocol.h"
 void (*set_sync)(struct wl_client *client,
    struct wl_resource *resource);
# 4478 "wayland-server-protocol.h"
 void (*set_desync)(struct wl_client *client,
      struct wl_resource *resource);
};