src/kernel/test/wlr/wayland.jl


struct wl_data_device_interface
    start_drag::Ptr{Cvoid}
    set_selection::Ptr{Cvoid}
    release::Ptr{Cvoid}
end

struct wl_data_device_manager_interface
    create_data_source::Ptr{Cvoid}
    get_data_device::Ptr{Cvoid}
end

struct wl_shell_interface
    get_shell_surface::Ptr{Cvoid}
end

struct wl_shell_surface_interface
    pong::Ptr{Cvoid}
    move::Ptr{Cvoid}
    resize::Ptr{Cvoid}
    set_toplevel::Ptr{Cvoid}
    set_transient::Ptr{Cvoid}
    set_fullscreen::Ptr{Cvoid}
    set_popup::Ptr{Cvoid}
    set_maximized::Ptr{Cvoid}
    set_title::Ptr{Cvoid}
    set_class::Ptr{Cvoid}
end

struct wl_surface_interface
    destroy::Ptr{Cvoid}
    attach::Ptr{Cvoid}
    damage::Ptr{Cvoid}
    frame::Ptr{Cvoid}
    set_opaque_region::Ptr{Cvoid}
    set_input_region::Ptr{Cvoid}
    commit::Ptr{Cvoid}
    set_buffer_transform::Ptr{Cvoid}
    set_buffer_scale::Ptr{Cvoid}
    damage_buffer::Ptr{Cvoid}
end

struct wl_seat_interface
    get_pointer::Ptr{Cvoid}
    get_keyboard::Ptr{Cvoid}
    get_touch::Ptr{Cvoid}
    release::Ptr{Cvoid}
end

struct wl_pointer_interface
    set_cursor::Ptr{Cvoid}
    release::Ptr{Cvoid}
end

struct wl_keyboard_interface
    release::Ptr{Cvoid}
end

struct wl_touch_interface
    release::Ptr{Cvoid}
end

struct wl_output_interface
    release::Ptr{Cvoid}
end

struct wl_region_interface
    destroy::Ptr{Cvoid}
    add::Ptr{Cvoid}
    subtract::Ptr{Cvoid}
end

struct wl_subcompositor_interface
    destroy::Ptr{Cvoid}
    get_subsurface::Ptr{Cvoid}
end

struct wl_subsurface_interface
    destroy::Ptr{Cvoid}
    set_position::Ptr{Cvoid}
    place_above::Ptr{Cvoid}
    place_below::Ptr{Cvoid}
    set_sync::Ptr{Cvoid}
    set_desync::Ptr{Cvoid}
end

# Skipping MacroDefinition: WL_EXPORT __attribute__ ( ( visibility ( "default" ) ) )
# Skipping MacroDefinition: WL_DEPRECATED __attribute__ ( ( deprecated ) )
# Skipping MacroDefinition: WL_PRINTF ( x , y ) __attribute__ ( ( __format__ ( __printf__ , x , y ) ) )
# Skipping MacroDefinition: wl_container_of ( ptr , sample , member ) ( __typeof__ ( sample ) ) ( ( char * ) ( ptr ) - offsetof ( __typeof__ ( * sample ) , member ) )
# Skipping MacroDefinition: wl_list_for_each ( pos , head , member ) for ( pos = wl_container_of ( ( head ) -> next , pos , member ) ; & pos -> member != ( head ) ; pos = wl_container_of ( pos -> member . next , pos , member ) )
# Skipping MacroDefinition: wl_list_for_each_safe ( pos , tmp , head , member ) for ( pos = wl_container_of ( ( head ) -> next , pos , member ) , tmp = wl_container_of ( ( pos ) -> member . next , tmp , member ) ; & pos -> member != ( head ) ; pos = tmp , tmp = wl_container_of ( pos -> member . next , tmp , member ) )
# Skipping MacroDefinition: wl_list_for_each_reverse ( pos , head , member ) for ( pos = wl_container_of ( ( head ) -> prev , pos , member ) ; & pos -> member != ( head ) ; pos = wl_container_of ( pos -> member . prev , pos , member ) )
# Skipping MacroDefinition: wl_list_for_each_reverse_safe ( pos , tmp , head , member ) for ( pos = wl_container_of ( ( head ) -> prev , pos , member ) , tmp = wl_container_of ( ( pos ) -> member . prev , tmp , member ) ; & pos -> member != ( head ) ; pos = tmp , tmp = wl_container_of ( pos -> member . prev , tmp , member ) )
# Skipping MacroDefinition: wl_array_for_each ( pos , array ) for ( pos = ( array ) -> data ; ( const char * ) pos < ( ( const char * ) ( array ) -> data + ( array ) -> size ) ; ( pos ) ++ )

struct wl_array
    size::Csize_t
    alloc::Csize_t
    data::Ptr{Cvoid}
end

const wl_fixed_t = Int32
const wl_dispatcher_func_t = Ptr{Cvoid}
const wl_log_func_t = Ptr{Cvoid}

@cenum wl_iterator_result::UInt32 begin
    WL_ITERATOR_STOP = 0
    WL_ITERATOR_CONTINUE = 1
end


const WAYLAND_VERSION_MAJOR = 1
const WAYLAND_VERSION_MINOR = 18
const WAYLAND_VERSION_MICRO = 0
const WAYLAND_VERSION = "1.18.0"

function wl_output_send_geometry(resource_, x, y, physical_width, physical_height, subpixel, make, model, transform)
    ccall((:wl_output_send_geometry, var"wayland-server-protocol"), Cvoid, (Ptr{wl_resource}, Int32, Int32, Int32, Int32, Int32, Cstring, Cstring, Int32), resource_, x, y, physical_width, physical_height, subpixel, make, model, transform)
end

function wl_output_send_mode(resource_, flags, width, height, refresh)
    ccall((:wl_output_send_mode, var"wayland-server-protocol"), Cvoid, (Ptr{wl_resource}, UInt32, Int32, Int32, Int32), resource_, flags, width, height, refresh)
end

function wl_output_send_done(resource_)
    ccall((:wl_output_send_done, var"wayland-server-protocol"), Cvoid, (Ptr{wl_resource},), resource_)
end

function wl_output_send_scale(resource_, factor)
    ccall((:wl_output_send_scale, var"wayland-server-protocol"), Cvoid, (Ptr{wl_resource}, Int32), resource_, factor)
end
# Julia wrapper for header: wayland-util.h
# Automatically generated using Clang.jl


function wl_list_init(list)
    ccall((:wl_list_init, var"wayland-util"), Cvoid, (Ptr{wl_list},), list)
end

function wl_list_insert(list, elm)
    ccall((:wl_list_insert, var"wayland-util"), Cvoid, (Ptr{wl_list}, Ptr{wl_list}), list, elm)
end

function wl_list_remove(elm)
    ccall((:wl_list_remove, var"wayland-util"), Cvoid, (Ptr{wl_list},), elm)
end

function wl_list_length(list)
    ccall((:wl_list_length, var"wayland-util"), Cint, (Ptr{wl_list},), list)
end

function wl_list_empty(list)
    ccall((:wl_list_empty, var"wayland-util"), Cint, (Ptr{wl_list},), list)
end

function wl_list_insert_list(list, other)
    ccall((:wl_list_insert_list, var"wayland-util"), Cvoid, (Ptr{wl_list}, Ptr{wl_list}), list, other)
end

function wl_array_init(array)
    ccall((:wl_array_init, var"wayland-util"), Cvoid, (Ptr{wl_array},), array)
end

function wl_array_release(array)
    ccall((:wl_array_release, var"wayland-util"), Cvoid, (Ptr{wl_array},), array)
end

function wl_array_add(array, size)
    ccall((:wl_array_add, var"wayland-util"), Ptr{Cvoid}, (Ptr{wl_array}, Csize_t), array, size)
end

function wl_array_copy(array, source)
    ccall((:wl_array_copy, var"wayland-util"), Cint, (Ptr{wl_array}, Ptr{wl_array}), array, source)
end

function wl_fixed_to_double(f)
    ccall((:wl_fixed_to_double, var"wayland-util"), Cdouble, (wl_fixed_t,), f)
end

function wl_fixed_from_double(d)
    ccall((:wl_fixed_from_double, var"wayland-util"), wl_fixed_t, (Cdouble,), d)
end

function wl_fixed_to_int(f)
    ccall((:wl_fixed_to_int, var"wayland-util"), Cint, (wl_fixed_t,), f)
end

function wl_fixed_from_int(i)
    ccall((:wl_fixed_from_int, var"wayland-util"), wl_fixed_t, (Cint,), i)
end
# Julia wrapper for header: wayland-version.h
# Automatically generated using Clang.jl

